source/cling.d




        import core.stdc.config;
        import core.stdc.stdarg: va_list;
        static import core.simd;

        template __from(string moduleName) {
            mixin("import from = " ~ moduleName ~ ";");
        }
        struct DppOffsetSize{ long offset; long size; }
        struct Int128 { long lower; long upper; }
        struct UInt128 { ulong lower; ulong upper; }

        struct __locale_data { int dummy; }


alias _Bool = bool;
struct dpp {

    static bool isEmpty(T)() {
        return T.tupleof.length == 0;
    }
    static struct Move(T) {
        T* ptr;
    }

    static auto move(T)(ref T value) {
        return Move!T(&value);
    }
    mixin template EnumD(string name, T, string prefix) if(is(T == enum)) {
        private static string _memberMixinStr(string member) {
            import std.conv: text;
            import std.array: replace;
            return text(` `, member.replace(prefix, ""), ` = `, T.stringof, `.`, member, `,`);
        }
        private static string _enumMixinStr() {
            import std.array: join;
            string[] ret;
            ret ~= "enum " ~ name ~ "{";
            static foreach(member; __traits(allMembers, T)) {
                ret ~= _memberMixinStr(member);
            }
            ret ~= "}";
            return ret.join("\n");
        }
        mixin(_enumMixinStr());
    }
}

extern(C)
{
    alias wchar_t = int;
    alias size_t = c_ulong;
    alias ptrdiff_t = c_long;
    struct max_align_t
    {
        @DppOffsetSize(0,8) long __clang_max_align_nonce1;
        @DppOffsetSize(16,16) real __clang_max_align_nonce2;
    }
    alias uintmax_t = c_ulong;
    alias intmax_t = c_long;
    alias uintptr_t = c_ulong;
    alias intptr_t = c_long;
    alias uint_fast64_t = c_ulong;
    alias uint_fast32_t = c_ulong;
    alias uint_fast16_t = c_ulong;
    alias uint_fast8_t = ubyte;
    alias int_fast64_t = c_long;
    alias int_fast32_t = c_long;
    alias int_fast16_t = c_long;
    alias int_fast8_t = byte;
    alias uint_least64_t = c_ulong;
    alias uint_least32_t = uint;
    alias uint_least16_t = ushort;
    alias uint_least8_t = ubyte;
    alias int_least64_t = c_long;
    alias int_least32_t = int;
    alias int_least16_t = short;
    alias int_least8_t = byte;
    alias __sig_atomic_t = int;
    alias __socklen_t = uint;
    alias __intptr_t = c_long;
    alias __caddr_t = char*;
    alias __loff_t = c_long;
    alias __syscall_ulong_t = c_ulong;
    alias __syscall_slong_t = c_long;
    alias __ssize_t = c_long;
    alias __fsword_t = c_long;
    alias __fsfilcnt64_t = c_ulong;
    alias __fsfilcnt_t = c_ulong;
    alias __fsblkcnt64_t = c_ulong;
    alias __fsblkcnt_t = c_ulong;
    alias __blkcnt64_t = c_long;
    alias __blkcnt_t = c_long;
    alias __blksize_t = c_long;
    alias __timer_t = void*;
    alias __clockid_t = int;
    alias __key_t = int;
    alias __daddr_t = int;
    alias __suseconds_t = c_long;
    alias __useconds_t = uint;
    alias __time_t = c_long;
    alias __id_t = uint;
    alias __rlim64_t = c_ulong;
    alias __rlim_t = c_ulong;
    alias __clock_t = c_long;
    struct __fsid_t
    {
        @DppOffsetSize(0,8) int[2] __val;
    }
    alias __pid_t = int;
    alias __off64_t = c_long;
    alias __off_t = c_long;
    alias __nlink_t = c_ulong;
    alias __mode_t = uint;
    alias __ino64_t = c_ulong;
    alias __ino_t = c_ulong;
    alias __gid_t = uint;
    alias __uid_t = uint;
    alias __dev_t = c_ulong;
    alias __uintmax_t = c_ulong;
    alias __intmax_t = c_long;
    alias __u_quad_t = c_ulong;
    alias __quad_t = c_long;
    alias __uint_least64_t = c_ulong;
    alias __int_least64_t = c_long;
    alias __uint_least32_t = uint;
    alias __int_least32_t = int;
    alias __uint_least16_t = ushort;
    alias __int_least16_t = short;
    alias __uint_least8_t = ubyte;
    alias __int_least8_t = byte;
    alias __uint64_t = c_ulong;
    alias __int64_t = c_long;
    alias __uint32_t = uint;
    alias __int32_t = int;
    alias __uint16_t = ushort;
    alias __int16_t = short;
    alias __uint8_t = ubyte;
    alias __int8_t = byte;
    alias __u_long = c_ulong;
    alias __u_int = uint;
    alias __u_short = ushort;
    alias __u_char = ubyte;
    alias uint64_t = ulong;
    alias uint32_t = uint;
    alias uint16_t = ushort;
    alias uint8_t = ubyte;
    alias int64_t = c_long;
    alias int32_t = int;
    alias int16_t = short;
    alias int8_t = byte;
    alias Unsigned = c_ulong;
    alias Signed = c_long;
    void cppyy_vectorbool_setitem(void*, int, int) @nogc nothrow;
    int cppyy_vectorbool_getitem(void*, int) @nogc nothrow;
    void cppyy_double2longdouble(double, void*) @nogc nothrow;
    double cppyy_longdouble2double(void*) @nogc nothrow;
    alias cppyy_scope_t = c_ulong;
    alias cppyy_type_t = c_ulong;
    alias cppyy_object_t = void*;
    alias cppyy_method_t = c_long;
    alias cppyy_index_t = c_ulong;
    alias cppyy_funcaddr_t = void*;
    alias cppyy_exctype_t = c_ulong;
    int cppyy_compile(const(char)*) @nogc nothrow;
    char* cppyy_resolve_name(const(char)*) @nogc nothrow;
    char* cppyy_resolve_enum(const(char)*) @nogc nothrow;
    c_ulong cppyy_get_scope(const(char)*) @nogc nothrow;
    c_ulong cppyy_actual_class(c_ulong, void*) @nogc nothrow;
    c_ulong cppyy_size_of_klass(c_ulong) @nogc nothrow;
    c_ulong cppyy_size_of_type(const(char)*) @nogc nothrow;
    void* cppyy_allocate(c_ulong) @nogc nothrow;
    void cppyy_deallocate(c_ulong, void*) @nogc nothrow;
    void* cppyy_construct(c_ulong) @nogc nothrow;
    void cppyy_destruct(c_ulong, void*) @nogc nothrow;
    void cppyy_call_v(c_long, void*, int, void*) @nogc nothrow;
    ubyte cppyy_call_b(c_long, void*, int, void*) @nogc nothrow;
    char cppyy_call_c(c_long, void*, int, void*) @nogc nothrow;
    short cppyy_call_h(c_long, void*, int, void*) @nogc nothrow;
    int cppyy_call_i(c_long, void*, int, void*) @nogc nothrow;
    c_long cppyy_call_l(c_long, void*, int, void*) @nogc nothrow;
    long cppyy_call_ll(c_long, void*, int, void*) @nogc nothrow;
    float cppyy_call_f(c_long, void*, int, void*) @nogc nothrow;
    double cppyy_call_d(c_long, void*, int, void*) @nogc nothrow;
    real cppyy_call_ld(c_long, void*, int, void*) @nogc nothrow;
    double cppyy_call_nld(c_long, void*, int, void*) @nogc nothrow;
    void* cppyy_call_r(c_long, void*, int, void*) @nogc nothrow;
    char* cppyy_call_s(c_long, void*, int, void*, c_ulong*) @nogc nothrow;
    void* cppyy_constructor(c_long, c_ulong, int, void*) @nogc nothrow;
    void cppyy_destructor(c_ulong, void*) @nogc nothrow;
    void* cppyy_call_o(c_long, void*, int, void*, c_ulong) @nogc nothrow;
    void* cppyy_function_address(c_long) @nogc nothrow;
    void* cppyy_allocate_function_args(int) @nogc nothrow;
    void cppyy_deallocate_function_args(void*) @nogc nothrow;
    c_ulong cppyy_function_arg_sizeof() @nogc nothrow;
    c_ulong cppyy_function_arg_typeoffset() @nogc nothrow;
    int cppyy_is_namespace(c_ulong) @nogc nothrow;
    int cppyy_is_template(const(char)*) @nogc nothrow;
    int cppyy_is_abstract(c_ulong) @nogc nothrow;
    int cppyy_is_enum(const(char)*) @nogc nothrow;
    const(char)** cppyy_get_all_cpp_names(c_ulong, c_ulong*) @nogc nothrow;
    c_ulong* cppyy_get_using_namespaces(c_ulong) @nogc nothrow;
    char* cppyy_final_name(c_ulong) @nogc nothrow;
    char* cppyy_scoped_final_name(c_ulong) @nogc nothrow;
    int cppyy_has_complex_hierarchy(c_ulong) @nogc nothrow;
    int cppyy_num_bases(c_ulong) @nogc nothrow;
    char* cppyy_base_name(c_ulong, int) @nogc nothrow;
    int cppyy_is_subtype(c_ulong, c_ulong) @nogc nothrow;
    int cppyy_smartptr_info(const(char)*, c_ulong*, c_long*) @nogc nothrow;
    void cppyy_add_smartptr_type(const(char)*) @nogc nothrow;
    c_long cppyy_base_offset(c_ulong, c_ulong, void*, int) @nogc nothrow;
    int cppyy_num_methods(c_ulong) @nogc nothrow;
    c_ulong* cppyy_method_indices_from_name(c_ulong, const(char)*) @nogc nothrow;
    c_long cppyy_get_method(c_ulong, c_ulong) @nogc nothrow;
    char* cppyy_method_name(c_long) @nogc nothrow;
    char* cppyy_method_full_name(c_long) @nogc nothrow;
    char* cppyy_method_mangled_name(c_long) @nogc nothrow;
    char* cppyy_method_result_type(c_long) @nogc nothrow;
    int cppyy_method_num_args(c_long) @nogc nothrow;
    int cppyy_method_req_args(c_long) @nogc nothrow;
    char* cppyy_method_arg_name(c_long, int) @nogc nothrow;
    char* cppyy_method_arg_type(c_long, int) @nogc nothrow;
    char* cppyy_method_arg_default(c_long, int) @nogc nothrow;
    char* cppyy_method_signature(c_long, int) @nogc nothrow;
    char* cppyy_method_signature_max(c_long, int, int) @nogc nothrow;
    char* cppyy_method_prototype(c_ulong, c_long, int) @nogc nothrow;
    int cppyy_is_const_method(c_long) @nogc nothrow;
    int get_num_templated_methods(c_ulong) @nogc nothrow;
    char* get_templated_method_name(c_ulong, c_ulong) @nogc nothrow;
    int cppyy_exists_method_template(c_ulong, const(char)*) @nogc nothrow;
    int cppyy_method_is_template(c_ulong, c_ulong) @nogc nothrow;
    c_long cppyy_get_method_template(c_ulong, const(char)*, const(char)*) @nogc nothrow;
    c_ulong cppyy_get_global_operator(c_ulong, c_ulong, c_ulong, const(char)*) @nogc nothrow;
    int cppyy_is_publicmethod(c_long) @nogc nothrow;
    int cppyy_is_constructor(c_long) @nogc nothrow;
    int cppyy_is_destructor(c_long) @nogc nothrow;
    int cppyy_is_staticmethod(c_long) @nogc nothrow;
    int cppyy_num_datamembers(c_ulong) @nogc nothrow;
    char* cppyy_datamember_name(c_ulong, int) @nogc nothrow;
    char* cppyy_datamember_type(c_ulong, int) @nogc nothrow;
    c_long cppyy_datamember_offset(c_ulong, int) @nogc nothrow;
    int cppyy_datamember_index(c_ulong, const(char)*) @nogc nothrow;
    int cppyy_is_publicdata(c_ulong, c_ulong) @nogc nothrow;
    int cppyy_is_staticdata(c_ulong, c_ulong) @nogc nothrow;
    int cppyy_is_const_data(c_ulong, c_ulong) @nogc nothrow;
    int cppyy_is_enum_data(c_ulong, c_ulong) @nogc nothrow;
    int cppyy_get_dimension_size(c_ulong, c_ulong, int) @nogc nothrow;
    long cppyy_strtoll(const(char)*) @nogc nothrow;
    ulong cppyy_strtoull(const(char)*) @nogc nothrow;
    void cppyy_free(void*) @nogc nothrow;
    void* cppyy_charp2stdstring(const(char)*, c_ulong) @nogc nothrow;
    const(char)* cppyy_stdstring2charp(void*, c_ulong*) @nogc nothrow;
    void* cppyy_stdstring2stdstring(void*) @nogc nothrow;






    enum DPP_ENUM__DARWIN_C_SOURCE = 1;


    enum DPP_ENUM__FILE_OFFSET_BITS = 64;


    enum DPP_ENUM__GNU_SOURCE = 1;


    enum DPP_ENUM__LARGEFILE_SOURCE = 1;


    enum DPP_ENUM__NETBSD_SOURCE = 1;


    enum DPP_ENUM___BSD_VISIBLE = 1;


    enum DPP_ENUM___XSI_VISIBLE = 700;
    enum DPP_ENUM___GLIBC_USE_LIB_EXT2 = 0;


    enum DPP_ENUM___GLIBC_USE_IEC_60559_BFP_EXT = 0;


    enum DPP_ENUM___GLIBC_USE_IEC_60559_FUNCS_EXT = 0;


    enum DPP_ENUM___GLIBC_USE_IEC_60559_TYPES_EXT = 0;


    enum DPP_ENUM__BITS_STDINT_INTN_H = 1;


    enum DPP_ENUM__BITS_STDINT_UINTN_H = 1;


    enum DPP_ENUM__BITS_TIME64_H = 1;






    enum DPP_ENUM__BITS_TYPES_H = 1;
    enum DPP_ENUM__BITS_TYPESIZES_H = 1;
    enum DPP_ENUM___OFF_T_MATCHES_OFF64_T = 1;


    enum DPP_ENUM___INO_T_MATCHES_INO64_T = 1;


    enum DPP_ENUM___RLIM_T_MATCHES_RLIM64_T = 1;


    enum DPP_ENUM___FD_SETSIZE = 1024;


    enum DPP_ENUM__BITS_WCHAR_H = 1;






    enum DPP_ENUM___WORDSIZE = 64;


    enum DPP_ENUM___WORDSIZE_TIME64_COMPAT32 = 1;


    enum DPP_ENUM___SYSCALL_WORDSIZE = 64;


    enum DPP_ENUM__FEATURES_H = 1;
    enum DPP_ENUM__DEFAULT_SOURCE = 1;


    enum DPP_ENUM___USE_ISOC11 = 1;


    enum DPP_ENUM___USE_ISOC99 = 1;


    enum DPP_ENUM___USE_ISOC95 = 1;


    enum DPP_ENUM___USE_POSIX_IMPLICITLY = 1;


    enum DPP_ENUM__POSIX_SOURCE = 1;




    enum DPP_ENUM___USE_POSIX = 1;


    enum DPP_ENUM___USE_POSIX2 = 1;


    enum DPP_ENUM___USE_POSIX199309 = 1;


    enum DPP_ENUM___USE_POSIX199506 = 1;


    enum DPP_ENUM___USE_XOPEN2K = 1;

